AjAX POST request created for form submission using jQuery

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       <!-- Form for posting a tweet -->
       <section class="new-tweet">
         <h2>What are you humming about?</h2>
-        <form method='POST' action='/tweets'>
+        <form id="submit-tweet" method='POST' action='/tweets'>
           <textarea name="text" id="tweet-text" placeholder="Compose tweet here"></textarea>
           <div>
             <button type="submit">Tweet</button>
