Scroll up button with features incorporated

--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
       
       <!--Container for all posted tweets -->
       <section id="tweets-container">
-      </section>
-      
+      </section> 
     </main>
+    <button id="toggle-btn"><i class="fas fa-angle-double-up"></i></button>
   </body>
 </html>
